Module 4: Spring Boot + Database (Spring Data JPA)