@@ -2,126 +2,167 @@ package com.example.employeemanagement.service.impl;
 
 import com.example.employeemanagement.dto.request.EmployeeRequest;
 import com.example.employeemanagement.dto.response.EmployeeResponse;
+import com.example.employeemanagement.entity.Department;
+import com.example.employeemanagement.entity.Employee;
+import com.example.employeemanagement.repository.DepartmentRepository;
+import com.example.employeemanagement.repository.EmployeeRepository;
 import com.example.employeemanagement.service.EmployeeService;
 import com.example.employeemanagement.service.UtilityService;
 import jakarta.annotation.PostConstruct;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-import java.time.LocalDateTime;
-import java.util.*;
-import java.util.concurrent.atomic.AtomicLong;
-import java.util.stream.Collectors;
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true)   // Mặc định: tất cả method là read-only
 public class EmployeeServiceImpl implements EmployeeService {
 
+    private final EmployeeRepository employeeRepository;
+    private final DepartmentRepository departmentRepository;
     private final UtilityService utilityService;
 
-    private final Map<Long, EmployeeResponse> store = new LinkedHashMap<>();
-    private final AtomicLong idCounter = new AtomicLong(1);
-
-    // ✅ Chạy SAU KHI utilityService đã được inject
+    // ─── SEED DATA ────────────────────────────────────────────────
     @PostConstruct
+    @Transactional   // Override readOnly = true để INSERT được
     public void initSampleData() {
-        EmployeeRequest emp1 = new EmployeeRequest();
-        emp1.setName("Nguyen Van An");
-        emp1.setEmail("an.nguyen@company.com");
-        emp1.setDepartment("Engineering");
-        emp1.setPosition("Backend Developer");
-        emp1.setSalary(25_000_000.0);
-        createEmployee(emp1);
+        // Tạo departments trước
+        Department engineering = departmentRepository.save(
+                Department.builder().name("Engineering").description("Software development").build()
+        );
+        Department hr = departmentRepository.save(
+                Department.builder().name("HR").description("Human resources").build()
+        );
+        Department finance = departmentRepository.save(
+                Department.builder().name("Finance").description("Financial management").build()
+        );
 
-        EmployeeRequest emp2 = new EmployeeRequest();
-        emp2.setName("Tran Thi Bich");
-        emp2.setEmail("bich.tran@company.com");
-        emp2.setDepartment("HR");
-        emp2.setPosition("HR Manager");
-        emp2.setSalary(30_000_000.0);
-        createEmployee(emp2);
+        // Tạo employees
+        employeeRepository.save(Employee.builder()
+                .employeeCode(utilityService.generateEmployeeCode())
+                .name("Nguyen Van An").email("an.nguyen@company.com")
+                .position("Backend Developer").salary(25_000_000.0)
+                .department(engineering).build());
 
-        EmployeeRequest emp3 = new EmployeeRequest();
-        emp3.setName("Le Van Cuong");
-        emp3.setEmail("cuong.le@company.com");
-        emp3.setDepartment("Engineering");
-        emp3.setPosition("Frontend Developer");
-        emp3.setSalary(22_000_000.0);
-        createEmployee(emp3);
+        employeeRepository.save(Employee.builder()
+                .employeeCode(utilityService.generateEmployeeCode())
+                .name("Tran Thi Bich").email("bich.tran@company.com")
+                .position("HR Manager").salary(30_000_000.0)
+                .department(hr).build());
+
+        employeeRepository.save(Employee.builder()
+                .employeeCode(utilityService.generateEmployeeCode())
+                .name("Le Van Cuong").email("cuong.le@company.com")
+                .position("Frontend Developer").salary(22_000_000.0)
+                .department(engineering).build());
+
+        employeeRepository.save(Employee.builder()
+                .employeeCode(utilityService.generateEmployeeCode())
+                .name("Pham Thi Dung").email("dung.pham@company.com")
+                .position("Accountant").salary(20_000_000.0)
+                .department(finance).build());
     }
 
+    // ─── READ ─────────────────────────────────────────────────────
     @Override
     public List<EmployeeResponse> getAllEmployees() {
-        return new ArrayList<>(store.values());
+        return employeeRepository.findAll()
+                .stream()
+                .map(this::toResponse)
+                .toList();
     }
 
     @Override
     public EmployeeResponse getEmployeeById(Long id) {
-        EmployeeResponse employee = store.get(id);
-        if (employee == null) {
-            throw new RuntimeException("Employee not found with id: " + id);
-        }
-        return employee;
+        Employee employee = employeeRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Employee not found: " + id));
+        return toResponse(employee);
     }
 
     @Override
     public List<EmployeeResponse> searchByName(String name) {
-        String keyword = name.toLowerCase();
-        return store.values().stream()
-                .filter(e -> e.getName().toLowerCase().contains(keyword))
-                .collect(Collectors.toList());
+        return employeeRepository.findByNameContainingIgnoreCase(name)
+                .stream().map(this::toResponse).toList();
     }
 
-    @Override
-    public EmployeeResponse createEmployee(EmployeeRequest request) {
-        Long id = idCounter.getAndIncrement();
+    // Tìm kiếm tổng hợp: theo tên HOẶC phòng ban
+    public List<EmployeeResponse> search(String keyword) {
+        return employeeRepository.searchByKeyword(keyword)
+                .stream().map(this::toResponse).toList();
+    }
 
-        EmployeeResponse response = EmployeeResponse.builder()
-                .id(id)
+    // ─── WRITE ────────────────────────────────────────────────────
+    @Override
+    @Transactional   // Override readOnly → cho phép INSERT/UPDATE/DELETE
+    public EmployeeResponse createEmployee(EmployeeRequest request) {
+        // Validate department tồn tại
+        Department department = departmentRepository
+                .findById(request.getDepartmentId())
+                .orElseThrow(() -> new RuntimeException(
+                        "Department not found: " + request.getDepartmentId()));
+
+        Employee employee = Employee.builder()
                 .employeeCode(utilityService.generateEmployeeCode())
                 .name(utilityService.formatName(request.getName()))
                 .email(request.getEmail())
-                .department(request.getDepartment())
                 .position(request.getPosition())
                 .salary(request.getSalary())
-                .createdAt(LocalDateTime.now())
+                .department(department)
                 .build();
 
-        store.put(id, response);
-        return response;
+        return toResponse(employeeRepository.save(employee));
     }
 
     @Override
+    @Transactional
     public EmployeeResponse updateEmployee(Long id, EmployeeRequest request) {
-        EmployeeResponse existing = getEmployeeById(id); // throws nếu không tìm thấy
+        Employee employee = employeeRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Employee not found: " + id));
 
-        // Giữ lại id, employeeCode, createdAt — chỉ cập nhật field được gửi lên
-        EmployeeResponse updated = EmployeeResponse.builder()
-                .id(existing.getId())
-                .employeeCode(existing.getEmployeeCode())
-                .createdAt(existing.getCreatedAt())
-                .name(request.getName() != null
-                        ? utilityService.formatName(request.getName())
-                        : existing.getName())
-                .email(request.getEmail() != null ? request.getEmail() : existing.getEmail())
-                .department(request.getDepartment() != null
-                        ? request.getDepartment()
-                        : existing.getDepartment())
-                .position(request.getPosition() != null
-                        ? request.getPosition()
-                        : existing.getPosition())
-                .salary(request.getSalary() != null ? request.getSalary() : existing.getSalary())
-                .build();
+        // Chỉ update field nếu request gửi lên (null = giữ nguyên)
+        if (request.getName() != null)
+            employee.setName(utilityService.formatName(request.getName()));
+        if (request.getEmail() != null)
+            employee.setEmail(request.getEmail());
+        if (request.getPosition() != null)
+            employee.setPosition(request.getPosition());
+        if (request.getSalary() != null)
+            employee.setSalary(request.getSalary());
+        if (request.getDepartmentId() != null) {
+            Department dept = departmentRepository
+                    .findById(request.getDepartmentId())
+                    .orElseThrow(() -> new RuntimeException(
+                            "Department not found: " + request.getDepartmentId()));
+            employee.setDepartment(dept);
+        }
 
-        store.put(id, updated);
-        return updated;
+        // Không cần gọi save() — @Transactional tự detect thay đổi (Dirty Checking)
+        return toResponse(employee);
     }
 
     @Override
+    @Transactional
     public void deleteEmployee(Long id) {
-        if (!store.containsKey(id)) {
-            throw new RuntimeException("Employee not found with id: " + id);
-        }
-        store.remove(id);
+        if (!employeeRepository.existsById(id))
+            throw new RuntimeException("Employee not found: " + id);
+        employeeRepository.deleteById(id);
+    }
+
+    // ─── MAPPER ───────────────────────────────────────────────────
+    // Convert Entity → DTO (tránh lộ Entity ra ngoài)
+    private EmployeeResponse toResponse(Employee e) {
+        return EmployeeResponse.builder()
+                .id(e.getId())
+                .employeeCode(e.getEmployeeCode())
+                .name(e.getName())
+                .email(e.getEmail())
+                .position(e.getPosition())
+                .salary(e.getSalary())
+                .departmentId(e.getDepartment() != null ? e.getDepartment().getId() : null)
+                .departmentName(e.getDepartment() != null ? e.getDepartment().getName() : null)
+                .createdAt(e.getCreatedAt())
+                .build();
     }
 }
